[package]
name = "system-message"
version = "0.0.1"
description = "Create system messages"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies.windows]
version = "0.51"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]